<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Blackjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_hit">Hit!</string>
    <string name="button_stand">Stand</string>
    <string name="button_play">Play</string>
    <string name="button_deal">Deal</string>
    <string name="button_reset">Reset</string>
    <string name="title_activity_black_jack">BlackJack</string>
    <string name="text_player">Player</string>
    <string name="text_dealer">Dealer</string>
    <string name="bank">Bank</string>
    <string name="bank_num">1000</string>
    <string name="bet">Bet</string>

</resources>
